--- a/FriendParty/app/views/layouts/application.html.erb
+++ b/FriendParty/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
-<%= yield %>
-
+  <header class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    title
+  </header>
+<div class="container">
+  <%= yield %>
+</div>
 </body>
 </html>
