--- a/FriendParty/app/assets/stylesheets/agency.scss
+++ b/FriendParty/app/assets/stylesheets/agency.scss
@@ -169,9 +169,7 @@ header {
 	@include background-cover;
 	text-align: center;
 	color: white;
-	.intro-text {
-		padding-top: 100px;
-		padding-bottom: 50px;
+	.intro-text , .simple-intro-text {
 		.intro-lead-in {
 			@include serif-font;
 			font-style: italic;
@@ -187,6 +185,16 @@ header {
 			margin-bottom: 25px;
 		}
 	}
+
+  .intro-text {
+		padding-top: 100px;
+		padding-bottom: 50px;
+  }
+
+  .simple-intro-text {
+		padding-top: 100px;
+		padding-bottom: 30px;
+  }
 }
 
 @media(min-width:768px) {
