--- a/FriendParty/app/views/layouts/application.html.erb
+++ b/FriendParty/app/views/layouts/application.html.erb
@@ -55,8 +55,28 @@
         <!-- /.container-fluid -->
     </nav>
 
-    <%= yield %>
+    <% if controller_name != 'welcome' %>
+      <%= render 'layouts/header' %>
+    <% end %>
 
+
+
+    <% if controller_name == 'welcome' %>
+      <%= yield %>
+    <% else %>
+      <div class="container">
+        <!--error message -->
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-danger">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <%= message %>
+          </div>
+        <% end %>
+        <%= yield %>
+      </div> 
+    <% end %>
+    
+    <%= debug(params) if Rails.env.development? %>
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 </body>
