--- a/FriendParty/app/views/layouts/application.html.erb
+++ b/FriendParty/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 </head>
-<body id="page-top" class="index">
+<body id="page-top" class="index" data-no-turbolink="true">
     <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
@@ -72,7 +72,9 @@
             <%= message %>
           </div>
         <% end %>
-        <%= yield %>
+        <div class="col-md-4 col-md-offset-4">
+          <%= yield %>
+        </div>
       </div> 
     <% end %>
     
