--- a/FriendParty/app/views/groups/new.html.erb
+++ b/FriendParty/app/views/groups/new.html.erb
@@ -6,7 +6,7 @@
 
  <div class="form-group">
   <%= f.label :intro %> 
-  <%= f.text_field :intro ,autofocus: true , class:"form-control" %>
+  <%= f.text_area :intro ,autofocus: true , class:"form-control" %>
  </div>
 
  <%= f.submit 'Create' , class:"btn btn-primary col-md-12"%>
