--- a/FriendParty/app/views/layouts/application.html.erb
+++ b/FriendParty/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
                       <ul class="dropdown-menu">
                         <li><a href="#">Page 1-1</a></li>
                         <li><a href="#">Page 1-2</a></li>
-                        <li><a href="#">Page 1-3</a></li> 
+                        <li><%= link_to "Sign out", destroy_user_session_path,:method => :delete %></li> 
                       </ul>
                     </li>
                 </ul>
