--- a/FriendParty/app/views/groups/show.html.erb
+++ b/FriendParty/app/views/groups/show.html.erb
@@ -3,6 +3,10 @@
   <div class="panel-footer"> <%= @group.created_at %></div>
 </div>
 
+<%= render @group.applications %>
+
+<%= render 'applications/form' %>
+
 <table class="members" summary="Group members">
   <%= render @users %>
 </table>
