--- a/FriendParty/app/views/applications/_application.html.erb
+++ b/FriendParty/app/views/applications/_application.html.erb
@@ -2,7 +2,9 @@
   <div class="panel-heading"> <%= @group.name%> </div>
   <div class="panel-body"> <%= application.content %> </div>
   <div class="panel-footer"> <%= current_user.email %></div>
-  <%= form_for agree_group_application_path do |f| %>
+
+  <%= form_for [@group,application],url: agree_group_application_path(@group,application), method: :patch  do |f| %>
     <%= f.submit 'Submit', :disable_with => 'Submiting...' , class:"btn btn-primary" %> 
   <% end %>
+
 </div>
