--- a/FriendParty/app/assets/stylesheets/application.scss
+++ b/FriendParty/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import 'bootstrap-datetimepicker';
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "agency"
