--- a/FriendParty/app/views/users/registrations/new.html.erb
+++ b/FriendParty/app/views/users/registrations/new.html.erb
@@ -16,7 +16,7 @@
     <%= f.password_field :password, autocomplete: "off" ,class:"form-control"%>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off",class:"form-control" %>
   </div>
