--- a/FriendParty/app/views/layouts/application.html.erb
+++ b/FriendParty/app/views/layouts/application.html.erb
@@ -83,9 +83,13 @@
             <%= message %>
           </div>
         <% end %>
-        <div class="col-md-4 col-md-offset-4">
+        <% if controller_path.include? "devise" %>
+          <div class="col-md-4 col-md-offset-4">
+            <%= yield %>
+          </div>
+        <% else %>
           <%= yield %>
-        </div>
+        <% end %>
       </div> 
     <% end %>
     
