--- a/FriendParty/app/views/groups/index.html.erb
+++ b/FriendParty/app/views/groups/index.html.erb
@@ -1,3 +1,9 @@
+<% form_tag groups_path, :method => 'get' do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+<% end %>
 <table  class="table">
 <% for group in @groups %>
   <tr>
