--- a/FriendParty/app/views/groups/search.html.erb
+++ b/FriendParty/app/views/groups/search.html.erb
@@ -1,9 +1,10 @@
-<% form_tag search_groups_path, :method => 'get' do %>
+<%= form_tag search_groups_path, :method => 'get' do %>
   <p>
     <%= text_field_tag :search, params[:search] %>
     <%= submit_tag "Search", :name => nil %>
   </p>
 <% end %>
+
 <table  class="table">
 <% for group in @groups %>
   <tr>
