--- a/FriendParty/app/views/applications/new.html.erb
+++ b/FriendParty/app/views/applications/new.html.erb
@@ -1,4 +1,4 @@
 <%= form_for [@group, @application] do |f| %>
-   <%= f.text_area :content %> 
-   <%= f.submit 'Join', :disable_with => 'ing...' %>
+   <%= f.text_area :content , class:"from-control" %> 
+   <%= f.submit 'Join', :disable_with => 'ing...' ,class:"btn btn-primary"%>
 <% end %>
