use font-awesome

--- a/FriendParty/app/views/groups/search.html.erb
+++ b/FriendParty/app/views/groups/search.html.erb
@@ -3,7 +3,7 @@
     <%= text_field_tag :search, params[:search] ,class:"form-control"%>
     <span class="input-group-btn">
       <%= button_tag "Search", :name => nil ,class:"btn btn-default" do%>
-        <span class="glyphicon glyphicon-search"></span>
+        <span class="fa fa-search"></span>
       <% end %>
     </span>
   </div>
