--- a/FriendParty/app/views/activities/new.html.erb
+++ b/FriendParty/app/views/activities/new.html.erb
@@ -7,7 +7,7 @@
   </div>
   <div class="form-group">
     <%= f.label :content, 'content' %>
-    <%= f.text_field :content, class:"form-control" %>
+    <%= f.text_area :content, class:"form-control" %>
   </div>
   <div class="form-group">
     <%= f.label :startime, 'starttime' %>
