--- a/FriendParty/app/views/activities/new.html.erb
+++ b/FriendParty/app/views/activities/new.html.erb
@@ -5,6 +5,17 @@
     <%= f.label :name, 'name' %>
     <%= f.text_field :name ,class:"form-control"%> 
   </div>
+
+  <%#create preview toolbar%>
+  <div class="form-group">
+    <div class="editor-toolbar col-sm-offset-2 col-sm-10">
+      <ul class="nav nav-pills">
+        <li class="edit active"><%= link_to('edit', "#") %></li>
+        <li class="preview"><%= link_to('preview', "#") %></li>
+      </ul>
+    </div>
+  </div>
+
   <div class="form-group">
     <%= f.label :content, 'content' %>
     <%= f.text_area :content, class:"form-control" %>
