--- a/FriendParty/app/assets/stylesheets/application.scss
+++ b/FriendParty/app/assets/stylesheets/application.scss
@@ -3,4 +3,6 @@
 @import 'bootstrap-datetimepicker';
 @import "font-awesome-sprockets";
 @import "font-awesome";
-@import "agency"
+@import "agency";
+@import "activities";
+@import "comments";
