--- a/FriendParty/app/assets/stylesheets/activities.css.scss
+++ b/FriendParty/app/assets/stylesheets/activities.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Activities controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#activity_content {
+  height: 300px;
+  width: 100%;
+  margin: 0px;  
+  display: inline;
+  overflow: scroll;
+}
+
+
+.panel-heading {
+  text-align: center;
+}
+
+#activity_content {
+  overflow: hidden;
+}
