--- a/FriendParty/app/views/welcome/_services.html.erb
+++ b/FriendParty/app/views/welcome/_services.html.erb
@@ -9,27 +9,29 @@
         </div>
         <div class="row text-center">
             <div class="col-md-4">
-                <span class="fa-stack fa-4x">
+                <span class="fa-stack fa-4x" id="main_search">
+                  <a href="/groups/search">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-search fa-stack-1x fa-inverse"></i>
+                  </a>
                 </span>
-                <h4 class="service-heading">E-Commerce</h4>
+                <h4 class="service-heading">搜索</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
             <div class="col-md-4">
-                <span class="fa-stack fa-4x">
+                <span class="fa-stack fa-4x" id="main_notification">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-comment-o fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Responsive Design</h4>
+                <h4 class="service-heading">通知</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
             <div class="col-md-4">
-                <span class="fa-stack fa-4x">
+                <span class="fa-stack fa-4x" id="main_help">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-question-circle fa-stack-1x fa-inverse"></i>
                 </span>
-                <h4 class="service-heading">Web Security</h4>
+                <h4 class="service-heading">帮助</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
         </div>
