--- a/FriendParty/app/views/groups/search.html.erb
+++ b/FriendParty/app/views/groups/search.html.erb
@@ -1,13 +1,16 @@
-<%= form_tag search_groups_path, :method => 'get' do %>
-  <div class="input-group">
-    <%= text_field_tag :search, params[:search] ,class:"form-control"%>
-    <span class="input-group-btn">
-      <%= button_tag "Search", :name => nil ,class:"btn btn-default" do%>
-        <span class="fa fa-search"></span>
-      <% end %>
-    </span>
-  </div>
-<% end %>
+<div class="search">
+  <%= form_tag search_groups_path, :method => 'get' do %>
+    <div class="input-group">
+      <%= text_field_tag :search, params[:search] ,class:"form-control"%>
+      <span class="input-group-btn">
+        <%= button_tag "Search", :name => nil ,class:"btn btn-default" do%>
+          <span class="fa fa-search"></span>
+        <% end %>
+      </span>
+    </div>
+  <% end %>
+</div>
+
 
 <table  class="table">
 <% for group in @groups %>
@@ -26,4 +29,6 @@
   </tr>
 <% end %>
 </table>
-<%= will_paginate @activities ,renderer: BootstrapPagination::Rails%>
+
+
+<%= will_paginate @groups ,renderer: BootstrapPagination::Rails%>
