add likes function

--- a/FriendParty/app/assets/stylesheets/groups.css.scss
+++ b/FriendParty/app/assets/stylesheets/groups.css.scss
@@ -7,3 +7,10 @@ div.search {
   margin-bottom: 20px;
 }
 
+div.toDesktop {
+  display: block;
+  float: right;
+  height: 40px;
+  width: 80px;
+}
+
