--- a/FriendParty/app/views/groups/index.html.erb
+++ b/FriendParty/app/views/groups/index.html.erb
@@ -16,4 +16,5 @@
   </tr>
 <% end %>
 </table>
-<%= will_paginate @activities ,renderer: BootstrapPagination::Rails%>
+
+<%= will_paginate @groups ,renderer: BootstrapPagination::Rails%>
