--- a/FriendParty/app/views/groups/show.html.erb
+++ b/FriendParty/app/views/groups/show.html.erb
@@ -1,6 +1,18 @@
 <div class="panel panel-default">
-  <div class="panel-body"> <%= @group.intro %> </div>
-  <div class="panel-footer"> <%= @group.created_at %></div>
+  <div class="panel-heading">
+    <div class="panel-title">
+     <%= @group.name %> 
+    </div>
+  </div>
+  <div class="panel-body">
+    <div class="toDesktop btn btn-primary" id="toDesktop">
+     <i class="fa fa-desktop fa-2x"></i> 
+    </div>
+    <%= @group.intro %>
+  </div>
+  <div class="panel-footer">
+    <%= @group.created_at %>
+  </div>
 </div>
 
 <%= render @group.applications %>
