--- a/FriendParty/app/views/groups/new.html.erb
+++ b/FriendParty/app/views/groups/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @group do |f| %>
+<%= form_for(@group ,html: { multipart: true }) do |f| %>
  <div class="form-group">
   <%= f.label :name  %> 
   <%= f.text_field :name ,autofocus: true , class:"form-control" %>
@@ -9,5 +9,14 @@
   <%= f.text_area :intro ,autofocus: true , class:"form-control" %>
  </div>
 
+
+<p>
+  <label>My Avatar</label>
+  <%= image_tag(@group.avatar_url) if @group.avatar? %>
+  <%= f.file_field :avatar %>
+  <%= f.hidden_field :avatar_cache %>
+</p>
+
  <%= f.submit 'Create' , class:"btn btn-primary col-md-12"%>
 <% end %>
+
