add group detail

--- a/FriendParty/app/assets/stylesheets/application.scss
+++ b/FriendParty/app/assets/stylesheets/application.scss
@@ -3,8 +3,9 @@
 @import 'bootstrap-datetimepicker';
 @import "font-awesome-sprockets";
 @import "font-awesome";
+@import "gritter";
 @import "agency";
 @import "activities";
 @import "comments";
 @import "groups";
-@import "gritter";
+@import "welcome";
