--- a/FriendParty/app/views/layouts/application.html.erb
+++ b/FriendParty/app/views/layouts/application.html.erb
@@ -34,21 +34,21 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#services">Services</a>
+                        <a class="page-scroll" href=<%= nav_href  "#services" %>>Services</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href= <%= nav_href "#portfolio"%>>Portfolio</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                      <a class="page-scroll" href=<%= nav_href "#about" %>>About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Team</a>
+                      <a class="page-scroll" href=<%= nav_href "#team" %>>Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#contact">Contact</a>
+                      <a class="page-scroll" href=<%= nav_href "#contact" %>>Contact</a>
                     </li>
-
+  
                     <li class="dropdown">
                       <a class="dropdown-toggle" data-toggle="dropdown" href="#" >Page 1
                       <span class="caret"></span></a>
