--- a/FriendParty/app/views/likes/_like.html.erb
+++ b/FriendParty/app/views/likes/_like.html.erb
@@ -1,14 +1,20 @@
 <div class="col-md-4 col-sm-6 portfolio-item">
-    <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
+  <a href= <%= "#portfolioModal#{like.id}"%> class="portfolio-link" data-toggle="modal">
         <div class="portfolio-hover">
             <div class="portfolio-hover-content">
                 <i class="fa fa-plus fa-3x"></i>
             </div>
         </div>
-        <%= image_tag(like.likeable.avatar_url, class:"img-responsive") if like.likeable.try(:avatar) %>
+        <%= like.likeable.try(:avatar).nil? ? image_tag(like.likeable.avatar_url, class:"img-responsive") : image_tag("portfolio/roundicons.png",class:"img-responsive")  %>
     </a>
     <div class="portfolio-caption">
         <h4><%= like.likeable.name %></h4>
-        <p class="text-muted">Graphic Design</p>
+        <p class="text-muted"> <%= like.likeable.owner.name %></p>
     </div>
 </div>
+
+
+
+<!-- Use the modals below to showcase details about your portfolio projects! -->
+
+<%= render "portfolio_modal" ,:like => like %>
