--- a/FriendParty/app/views/welcome/_portfolio_modal.html.erb
+++ b/FriendParty/app/views/welcome/_portfolio_modal.html.erb
@@ -1,5 +1,5 @@
 <!-- Portfolio Modal 1 -->
-<div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="portfolio-modal modal fade" id=<%="portfolioModal#{like.id}"%> tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-content">
         <div class="close-modal" data-dismiss="modal">
             <div class="lr">
@@ -12,17 +12,18 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <div class="modal-body">
                         <!-- Project Details Go Here -->
-                        <h2>Project Name</h2>
-                        <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
-                        <%= image_tag('portfolio/roundicons-free.png', class:"img-responsive img-centered",alt:"") %>
-                        <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Est blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt officia expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                        <h2> <%= like.likeable.name %></h2>
+                        <p class="item-intro text-muted"></p>
+                        <%= like.likeable.try(:avatar).nil? ? image_tag(like.likeable.avatar_url, class:"img-responsive") : image_tag("portfolio/roundicons.png",class:"img-responsive")  %>
+                        <p> <%= like.likeable.intro %> </p>
                         <p>
                             <strong>Want these icons in this portfolio item sample?</strong>You can download 60 of them for free, courtesy of <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">RoundIcons.com</a>, or you can purchase the 1500 icon set <a href="https://getdpd.com/cart/hoplink/18076?referrer=bvbo4kax5k8ogc">here</a>.</p>
                         <ul class="list-inline">
-                            <li>Date: July 2014</li>
-                            <li>Client: Round Icons</li>
-                            <li>Category: Graphic Design</li>
+                            <li>Date: <%= like.likeable.created_at %></li>
+                            <li>Client: <%= like.likeable.owner.name %></li>
+                            <li>Category: <%= like.likeable.users.count %></li>
                         </ul>
+                        <%= link_to "detail" ,like.likeable , class:'btn btn-primary'%>
                         <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                     </div>
                 </div>
