--- a/FriendParty/app/views/welcome/_services.html.erb
+++ b/FriendParty/app/views/welcome/_services.html.erb
@@ -19,11 +19,13 @@
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
             <div class="col-md-4">
-                <span class="fa-stack fa-4x" id="main_notification">
+                <span class="fa-stack fa-4x" id="main_groups">
+                  <a href="/groups">
                     <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                    <i class="fa fa-comment-o fa-stack-1x fa-inverse"></i>
+                    <i class="fa fa-users fa-stack-1x fa-inverse"></i>
+                  </a>
                 </span>
-                <h4 class="service-heading">通知</h4>
+                <h4 class="service-heading">群组</h4>
                 <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
             </div>
             <div class="col-md-4">
