add flow for activity

--- a/FriendParty/app/views/activities/new.html.erb
+++ b/FriendParty/app/views/activities/new.html.erb
@@ -20,7 +20,7 @@
 
   <div class="form-group" id="content">
     <%= f.label :content, 'content' %>
-    <%= f.text_area :content, class:"form-control" %>
+    <%= f.text_area :content, class:"form-control" ,"data-provide" => "markdown" , "rows" => "15" %>
   </div>
 
 
