--- a/FriendParty/app/views/groups/new.html.erb
+++ b/FriendParty/app/views/groups/new.html.erb
@@ -6,7 +6,7 @@
 
  <div class="form-group">
   <%= f.label :intro %> 
-  <%= f.text_area :intro ,autofocus: true , class:"form-control" %>
+  <%= f.text_area :intro ,autofocus: true , class:"form-control" ,"data-provide" => "markdown" , "rows" => "15"%>
  </div>
 
 
