--- a/FriendParty/app/views/comments/_form.html.erb
+++ b/FriendParty/app/views/comments/_form.html.erb
@@ -1,11 +1,9 @@
 <div class="create_comment">
   <%= form_for [@group , @activity, if @activity.nil? then Comment.new  else @activity.comments.build end], remote: true do |f| %>
 
-    <%= render "shared/post_header" %>
-
     <div class="form-group" id="content">
       <%= f.label :content, 'content' %>
-      <%= f.text_area :content, class:"form-control" %>
+      <%= f.text_area :content, class:"form-control" , "data-provide" => "markdown" , "rows" => "10" %>
     </div>
 
     <%= f.submit 'Submit',:class=>"btn", :disable_with => 'Submiting...' %>
