--- a/FriendParty/app/views/events/index.html.erb
+++ b/FriendParty/app/views/events/index.html.erb
@@ -1,8 +1,8 @@
 <% for event in @events %>
   <tr>
-    <td><%= <%= link_to event.name, show_activity_event_path  %></td>
+    <td><%=  link_to event.name, show_activity_event_path  %></td>
     <td><%= event.content  %></td>
   </tr> 
 <% end %>  
 
-<%= will_paginate @events %>
+<%= will_paginate @events ,renderer: BootstrapPagination::Rails%>
