--- a/FriendParty/app/views/events/new.html.erb
+++ b/FriendParty/app/views/events/new.html.erb
@@ -4,11 +4,6 @@
   <%= f.text_field :name ,class:"form-control"%>
  </div> 
 
- <div class="form-group">
-  <%= f.label :content %> 
-  <%= f.text_area :content ,class:"form-control"%>
- </div>
-
   <div class="form-group">
     <%= f.label :startime, 'starttime' %>
     <%= f.text_field :start_time,class:"form-control datepicker"%> 
@@ -18,6 +13,11 @@
     <%= f.label :endtime, 'endtime' %>
     <%= f.text_field :end_time,class:"form-control datepicker"%> 
   </div>
+  
+  <div class="form-group">
+  <%= f.label :content %> 
+  <%= f.text_area :content ,class:"form-control", 'data-provide' => 'markdown' , 'rows' => '15' %>
+ </div>
 
   <%= f.submit 'Submit', :disable_with => 'Submiting...' ,class:"btn btn-primary"%>
 
