add flow for activity

--- a/FriendParty/app/views/activities/show.html.erb
+++ b/FriendParty/app/views/activities/show.html.erb
@@ -17,7 +17,7 @@
 </div>
 
 <div class="float-control">
-  <%= link_to "<i class='fa fa-plus'></i> events".html_safe , group_activity_events_path ,class:'btn btn-primary'%> 
+  <%= link_to "<i class='fa fa-plus'></i> events".html_safe , group_activity_events_path(@group,@activity) ,class:'btn btn-primary'%> 
 </div>
 
 
