add track events

--- a/FriendParty/app/views/activities/index.html.erb
+++ b/FriendParty/app/views/activities/index.html.erb
@@ -3,6 +3,7 @@
   <tr>
     <td><%=activity.name%></td>
     <td><%=activity.content%></td>
+    <td><%= track_tag activity %></td>
   </tr> 
 <% end %>
 </table>
