--- a/FriendParty/app/views/activities/show.html.erb
+++ b/FriendParty/app/views/activities/show.html.erb
@@ -7,6 +7,7 @@
    <div class="end_time">
      <%= format_time @activity.end_time %>
    </div>
+   <%= track_tag @activity %>
   </div>
   <div class="panel-body">
    <%= render_markdown(@activity.content).html_safe %> 
