--- a/FriendParty/app/views/events/index.html.erb
+++ b/FriendParty/app/views/events/index.html.erb
@@ -1,8 +1,19 @@
-<% for event in @events %>
-  <tr>
-    <td><%=  link_to event.name, event_path(event)  %></td>
-    <td><%= event.content  %></td>
-  </tr> 
-<% end %>  
-
-<%= will_paginate @events ,renderer: BootstrapPagination::Rails%>
+<section id="events">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Events</h2>
+                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="timeline">
+                  <% for @event in @events %>
+                    <%= render @event%>
+                  <% end %> 
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
