--- a/FriendParty/app/views/layouts/application.html.erb
+++ b/FriendParty/app/views/layouts/application.html.erb
@@ -53,8 +53,7 @@
                       <a class="dropdown-toggle" data-toggle="dropdown" href="#" >Page 1
                       <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        <li><a href="#">Page 1-1</a></li>
-                        <li><a href="#">Page 1-2</a></li>
+                        <li><a href="#">Account</a></li>
                         <li><%= link_to "Sign out", destroy_user_session_path,:method => :delete %></li> 
                       </ul>
                     </li>
@@ -78,7 +77,7 @@
       <div class="container">
         <!--error message -->
         <% flash.each do |message_type, message| %>
-          <div class=<%= "alert alert-#{alert_type(message_type)}"%>>
+          <div class="alert alert-<%= alert_type(message_type) %>">
             <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
             <%= message %>
           </div>
