--- a/FriendParty/app/views/welcome/_portfolio.html.erb
+++ b/FriendParty/app/views/welcome/_portfolio.html.erb
@@ -8,8 +8,8 @@
             </div>
         </div>
         <div class="row">
-          <% for like in current_user.likes %>
-            <%= render  like %> 
+          <% for favorite in current_user.favorites %>
+            <%= render  favorite %> 
           <% end %>
         </div>
     </div>
