--- a/FriendParty/app/views/activities/downvotes.js.erb
+++ b/FriendParty/app/views/activities/downvotes.js.erb
@@ -1,2 +1,3 @@
 $("div#downvotes > i > span").text( <%= @activity.get_downvotes.size %> )
 $("div#upvotes > i > span").text( <%= @activity.get_upvotes.size %> )
+$("#generate-chart").html("<%= escape_javascript(render partial: 'generate_chart') %>")
