--- a/FriendParty/app/views/activities/new.html.erb
+++ b/FriendParty/app/views/activities/new.html.erb
@@ -1,5 +1,4 @@
 <%= form_for @activity ,url: group_activities_path do |f| %>
-  <%= @activity.errors.messages %>
   
   <div class="form-group">
     <%= f.label :name, 'name' %>
@@ -7,16 +6,14 @@
   </div>
 
   <%#date picker%>
-  <div class="form-group">
+  <div class="form-group datepicker">
     <%= f.label :startime, 'starttime' %>
     <%= f.text_field :start_time,class:"form-control datepicker"%> 
   </div>
-  <div class="form-group">
+  <div class="form-group datepicker">
     <%= f.label :endtime, 'endtime' %>
     <%= f.text_field :end_time,class:"form-control datepicker"%> 
   </div>
-
-  <%= render "shared/post_header" %>
 
   <div class="form-group" id="content">
     <%= f.label :content, 'content' %>
