--- a/FriendParty/app/views/events/new.html.erb
+++ b/FriendParty/app/views/events/new.html.erb
@@ -4,12 +4,12 @@
   <%= f.text_field :name ,class:"form-control"%>
  </div> 
 
-  <div class="form-group">
+  <div class="form-group datepicker">
     <%= f.label :startime, 'starttime' %>
     <%= f.text_field :start_time,class:"form-control datepicker"%> 
   </div>
 
-  <div class="form-group">
+  <div class="form-group datepicker">
     <%= f.label :endtime, 'endtime' %>
     <%= f.text_field :end_time,class:"form-control datepicker"%> 
   </div>
@@ -18,7 +18,6 @@
   <%= f.label :content %> 
   <%= f.text_area :content ,class:"form-control", 'data-provide' => 'markdown' , 'rows' => '15' %>
  </div>
-
 
   <p>
     <label>My Avatar</label>
