--- a/FriendParty/app/views/events/show.html.erb
+++ b/FriendParty/app/views/events/show.html.erb
@@ -7,6 +7,8 @@
    <div class="end_time">
      <%= format_time @event.end_time %>
    </div>
+
+   <%= render "shared/vote_control" %>
   </div>
   <div class="panel-body">
    <%= render_markdown(@event.content).html_safe %> 
@@ -14,6 +16,10 @@
   <div class="panel-footer">
    <%= @event.user.name %> 
   </div>
+</div>
+
+<div id="generate-chart" >
+  <%= render "shared/generate_chart" %>
 </div>
 
 <div id="comment_box">
