translate to chinese

--- a/FriendParty/app/views/welcome/_team.html.erb
+++ b/FriendParty/app/views/welcome/_team.html.erb
@@ -10,15 +10,15 @@
         <div class="row">
             <div class="col-sm-4">
                 <div class="team-member">
-                    <%= image_tag('team/1.jpg', class:"img-responsive img-circle", alt:"") %>
+                    <%= image_tag("https://avatars1.githubusercontent.com/u/5013020?v=3&s=460", class:"img-responsive img-circle", alt:"") %>
                     <h4>Kay Garland</h4>
-                    <p class="text-muted">Lead Designer</p>
+                    <p class="text-muted"><%= t "Lead Designer" %></p>
                     <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
+                        <li><a href="http://weibo.com/chengkai1853/home?leftnav=1" target="_blank"><i class="fa fa-weibo"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
+                        <li><a href="https://www.facebook.com/?ref=tn_tnmn" target="_blank"><i class="fa fa-facebook"></i></a>
                         </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                        <li><a href="https://github.com/kaich" target="_blank"><i class="fa fa-github"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -26,23 +26,8 @@
             <div class="col-sm-4">
                 <div class="team-member">
                     <%= image_tag('team/2.jpg', class:"img-responsive img-circle", alt:"") %>
-                    <h4>Larry Parker</h4>
-                    <p class="text-muted">Lead Marketer</p>
-                    <ul class="list-inline social-buttons">
-                        <li><a href="#"><i class="fa fa-twitter"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a>
-                        </li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="team-member">
-                    <%= image_tag('team/3.jpg', class:"img-responsive img-circle", alt:"") %>
-                    <h4>Diana Pertersen</h4>
-                    <p class="text-muted">Lead Developer</p>
+                    <h4> <%= t :wait_for_you %></h4>
+                    <p class="text-muted"> <%= t :member %></p>
                     <ul class="list-inline social-buttons">
                         <li><a href="#"><i class="fa fa-twitter"></i></a>
                         </li>
@@ -56,7 +41,7 @@
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                <p class="large text-muted"> <%=t :member_descript %></p>
             </div>
         </div>
     </div>
