--- a/FriendParty/app/views/welcome/index.html.erb
+++ b/FriendParty/app/views/welcome/index.html.erb
@@ -8,9 +8,9 @@
 
     <%= render "team" %>
 
-    <%= render "client" %>
+    <% render "client" %>
     
-    <%= render "contact" %>
+    <% render "contact" %>
 
     <%= render "footer" %>
 
