--- a/FriendParty/app/views/layouts/application.html.erb
+++ b/FriendParty/app/views/layouts/application.html.erb
@@ -34,23 +34,23 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href=<%= nav_href  "#services" %>>Services</a>
+                        <a class="page-scroll" href=<%= nav_href  "#services" %>> <%= t :service %></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href= <%= nav_href "#portfolio"%>>Portfolio</a>
+                        <a class="page-scroll" href= <%= nav_href "#portfolio"%>> <%= t :favorite %></a>
                     </li>
                     <li>
-                      <a class="page-scroll" href=<%= nav_href "#about" %>>About</a>
+                      <a class="page-scroll" href=<%= nav_href "#about" %>> <%= t :track %></a>
                     </li>
                     <li>
-                      <a class="page-scroll" href=<%= nav_href "#team" %>>Team</a>
+                      <a class="page-scroll" href=<%= nav_href "#team" %>> <%= t :team  %></a>
                     </li>
                     <li>
-                      <a class="page-scroll" href=<%= nav_href "#contact" %>>Contact</a>
+                      <a class="page-scroll" href=<%= nav_href "#contact" %>> <%= t :contact %></a>
                     </li>
   
                     <li class="dropdown">
-                      <a class="dropdown-toggle" data-toggle="dropdown" href="#" >Page 1
+                      <a class="dropdown-toggle" data-toggle="dropdown" href="#" ><i class="fa fa-user"></i>
                       <span class="caret"></span></a>
                       <ul class="dropdown-menu">
                         <li><a href="#">Account</a></li>
@@ -97,3 +97,4 @@
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
 </body>
 </html>
+                        <a class="page-scroll" href= <%= nav_href "#portfolio"%>>Portfolio</a>
