--- a/FriendParty/app/views/welcome/_footer.html.erb
+++ b/FriendParty/app/views/welcome/_footer.html.erb
@@ -2,23 +2,21 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-                <span class="copyright">Copyright &copy; Your Website 2014</span>
+                <span class="copyright">Copyright &copy; friend activity 2015</span>
             </div>
             <div class="col-md-4">
                 <ul class="list-inline social-buttons">
-                    <li><a href="#"><i class="fa fa-twitter"></i></a>
+                    <li> <%= t :source_intro %>
                     </li>
-                    <li><a href="#"><i class="fa fa-facebook"></i></a>
-                    </li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a>
+                    <li><a href="https://github.com/kaich/Friend-Activity" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                 </ul>
             </div>
             <div class="col-md-4">
                 <ul class="list-inline quicklinks">
-                    <li><a href="#">Privacy Policy</a>
+                    <li><a href="#"></a>
                     </li>
-                    <li><a href="#">Terms of Use</a>
+                    <li><a href="#"></a>
                     </li>
                 </ul>
             </div>
