--- a/FriendParty/app/views/welcome/_portfolio.html.erb
+++ b/FriendParty/app/views/welcome/_portfolio.html.erb
@@ -3,8 +3,8 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Portfolio</h2>
-                <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <h2 class="section-heading"> <%= t :favorite %></h2>
+                <h3 class="section-subheading text-muted"> <%= t :favorite_descript %></h3>
             </div>
         </div>
         <div class="row">
