--- a/FriendParty/app/views/welcome/_services.html.erb
+++ b/FriendParty/app/views/welcome/_services.html.erb
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Services</h2>
+                <h2 class="section-heading"> <%= t :service %></h2>
                 <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
             </div>
         </div>
@@ -16,7 +16,7 @@
                   </a>
                 </span>
                 <h4 class="service-heading">搜索</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <p class="text-muted"> <%= t :search_descript %></p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x" id="main_groups">
@@ -26,7 +26,7 @@
                   </a>
                 </span>
                 <h4 class="service-heading">群组</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <p class="text-muted"> <%= t :group_descript %></p>
             </div>
             <div class="col-md-4">
                 <span class="fa-stack fa-4x" id="main_help">
@@ -36,7 +36,7 @@
                   </a>
                 </span>
                 <h4 class="service-heading">帮助</h4>
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                <p class="text-muted"> <%= t :help_descript %></p>
             </div>
         </div>
     </div>
