continue translate zh

--- a/FriendParty/app/views/users/passwords/new.html.erb
+++ b/FriendParty/app/views/users/passwords/new.html.erb
@@ -1,15 +1,15 @@
-<h2>Forgot your password?</h2>
+<h2> <%= t :forgot_password %></h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="form-group">
-    <%= f.label :email %><br />
+    <%= f.label :email , t(:email) %><br />
     <%= f.email_field :email, autofocus: true ,class:"form-control"%>
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" ,class:"btn btn-primary col-md-12"%>
+    <%= f.submit t(:Send_me_reset_password_instructions) ,class:"btn btn-primary col-md-12"%>
   </div>
 <% end %>
 
