--- a/FriendParty/app/views/layouts/application.html.erb
+++ b/FriendParty/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand page-scroll" href="#page-top"> <%= t :project_name %></a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -53,8 +53,8 @@
                       <a class="dropdown-toggle" data-toggle="dropdown" href="#" ><i class="fa fa-user"></i>
                       <span class="caret"></span></a>
                       <ul class="dropdown-menu">
-                        <li><a href="#">Account</a></li>
-                        <li><%= link_to "Sign out", destroy_user_session_path,:method => :delete %></li> 
+                        <li><a href="#"> <%= t :account %></a></li>
+                        <li><%= link_to t(:logout), destroy_user_session_path,:method => :delete %></li> 
                       </ul>
                     </li>
                 </ul>
