--- a/FriendParty/app/views/users/registrations/new.html.erb
+++ b/FriendParty/app/views/users/registrations/new.html.erb
@@ -1,28 +1,28 @@
-<h2>Sign up</h2>
+<h2> <%= t :sign_up %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
  
   <div class="form-group">
-      <%= f.label :email %><br />
+      <%= f.label :email, t(:email) %><br />
       <%= f.email_field :email, autofocus: true ,class:"form-control"%>
   </div>
 
   <div class="form-group">
-    <%= f.label :password %>
+    <%= f.label :password, t(:password) %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
+      <em>(<%= t :password_mininum, :num => @minimum_password_length %> )</em>
     <% end %><br />
     <%= f.password_field :password, autocomplete: "off" ,class:"form-control"%>
   </div>
 
   <div class="form-group">
-    <%= f.label :password_confirmation %><br />
+    <%= f.label :password_confirmation , t(:password_confirmation)%><br />
     <%= f.password_field :password_confirmation, autocomplete: "off",class:"form-control" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Sign up" ,class:"btn btn-primary col-md-12"%>
+    <%= f.submit t(:sign_up) ,class:"btn btn-primary col-md-12"%>
   </div>
 <% end %>
 
