--- a/FriendParty/app/views/activities/participate.js.erb
+++ b/FriendParty/app/views/activities/participate.js.erb
@@ -1,2 +1,3 @@
 $("#participate-item > i").attr("class" , "fa fa-sign-out fa-2x")
 $("#participate-item").data("method","dropout")
+$("#participate-item  .i-text").text("<%=  t :dropout %>")
