--- a/FriendParty/app/views/groups/index.html.erb
+++ b/FriendParty/app/views/groups/index.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 
 <div class="float-control">
-  <%= link_to "<i class='fa fa-plus'></i> new group".html_safe , new_group_path ,class:'btn btn-primary'%> 
+  <%= link_to "<i class='fa fa-plus'></i>#{t :new_group}".html_safe , new_group_path ,class:'btn btn-primary'%> 
 </div>
 
 <table  class="table">
