--- a/FriendParty/app/views/activities/dropout.js.erb
+++ b/FriendParty/app/views/activities/dropout.js.erb
@@ -1,2 +1,3 @@
 $("#participate-item > i").attr("class","fa fa-sign-in fa-2x")
 $("#participate-item").data("method","participate")
+$("#participate-item  .i-text").text("<%=  t :participate %>")
