--- a/FriendParty/app/views/activities/track.js.erb
+++ b/FriendParty/app/views/activities/track.js.erb
@@ -1,2 +1,3 @@
 $("#track-item > i").attr("class" , "fa fa-heart fa-2x")
 $("#track-item").data("method","untrack")
+$("#track-item  .i-text").text( "<%=  t :untrack %>")
