--- a/FriendParty/app/views/activities/untrack.js.erb
+++ b/FriendParty/app/views/activities/untrack.js.erb
@@ -1,2 +1,3 @@
 $("#track-item > i").attr("class","fa fa-heart-o fa-2x")
 $("#track-item").data("method","track")
+$("#track-item  .i-text").text("<%=  t :track %>")
