--- a/FriendParty/app/views/events/show.html.erb
+++ b/FriendParty/app/views/events/show.html.erb
@@ -1,31 +1,34 @@
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <%= "<h4>#{@event.name}</h4>".html_safe %> 
-   <div class='star_time'>
-     <%= format_time @event.start_time %>
-   </div>
-   <div class="end_time">
-     <%= format_time @event.end_time %>
-   </div>
+<div class="col-md-9">
+  
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <%= "<h4>#{@event.name}</h4>".html_safe %> 
+     <div class='star_time'>
+       <%= format_time @event.start_time %>
+     </div>
+     <div class="end_time">
+       <%= format_time @event.end_time %>
+     </div>
 
-   <%= render "shared/vote_control" %>
+    </div>
+    <div class="panel-body">
+     <%= render_markdown(@event.content).html_safe %> 
+    </div>
+    <div class="panel-footer">
+     <%= @event.user.name %> 
+    </div>
   </div>
-  <div class="panel-body">
-   <%= render_markdown(@event.content).html_safe %> 
+
+
+
+  <div id="comment_box">
+    <% for @comment in @event.comments %>
+     <%= render @comment %> 
+    <% end %>
   </div>
-  <div class="panel-footer">
-   <%= @event.user.name %> 
-  </div>
+
+  <%= render "comments/form" ,favoritable: @event%>
+
 </div>
 
-<div id="generate-chart" >
-  <%= render "shared/generate_chart" %>
-</div>
-
-<div id="comment_box">
-  <% for @comment in @event.comments %>
-   <%= render @comment %> 
-  <% end %>
-</div>
-
-<%= render "comments/form" ,favoritable: @event%>
+<%= render "shared/sidebar" %>
