--- a/FriendParty/app/views/groups/search.html.erb
+++ b/FriendParty/app/views/groups/search.html.erb
@@ -1,7 +1,7 @@
 <div class="search">
   <%= form_tag search_groups_path, :method => 'get' do %>
     <div class="input-group">
-      <%= text_field_tag :search, params[:search] ,class:"form-control"%>
+      <%= text_field_tag :search, params[:search] ,class:"form-control" , placeholder:t(:search_placeholder) %>
       <span class="input-group-btn">
         <%= button_tag "Search", :name => nil ,class:"btn btn-default" do%>
           <span class="fa fa-search"></span>
