--- a/FriendParty/app/views/groups/show.html.erb
+++ b/FriendParty/app/views/groups/show.html.erb
@@ -18,7 +18,7 @@
 
 
 <div class="float-control">
-  <%= link_to "<i class='fa fa-plus'></i> new activity".html_safe , new_group_activity_path(@group) ,class:'btn btn-primary'%> 
+  <%= link_to "<i class='fa fa-plus'></i>#{t :new_activity}".html_safe , new_group_activity_path(@group) ,class:'btn btn-primary'%> 
 </div>
 
 <%= render @group.applications %>
