--- a/FriendParty/app/views/layouts/application.html.erb
+++ b/FriendParty/app/views/layouts/application.html.erb
@@ -95,5 +95,6 @@
     <%= debug(params) if Rails.env.development? %>
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <%= javascript_include_tag "bootstrap-markdown.zh" %>
 </body>
 </html>
