change none event

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -6,3 +6,13 @@
 .img-responsive {
   margin: auto;
 }
+
+div.none-event {
+  i {
+    margin: 0 , auto;
+  }
+
+  p {
+      margin: 0 ,auto;
+  }
+}
